<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">
        <item
            android:id="@+id/action_start_rec"
            android:orderInCategory="100"
            android:title="@string/action_start_rec"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_stop_rec"
            android:orderInCategory="100"
            android:title="@string/action_stop_rec"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_choise_time"
            android:orderInCategory="100"
            android:title="@string/action_choise_time"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_play_rec"
            android:orderInCategory="100"
            android:title="@string/action_play_rec"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_remove_base"
            android:orderInCategory="100"
            android:title="@string/action_remove_base"
            app:showAsAction="never"/>

</menu>